# investment_plan

./: .gitignore  README.md  pyproject.toml  scraper_fiis.py
investment_plan/: main.py
investment_plan/analyzers/: analyzer_acoes.py  analyzer_fiis.py
investment_plan/data/: __init__.py  data_handler.py
investment_plan/scrapers/: scraper_acoes.py  scraper_fiis.py
